[package]
name = "dllinject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.25.1"
reqwest = { version = "0.11", features = ["blocking"] }
clap = "3.2.16"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security"
]