[package]
name = "dllinject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.34.2"
reqwest = { version = "0.12.15", features = ["blocking"] }
clap = { version = "4.5.35", features = ["derive"] }
windows-strings = "0.4.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security"
]
